# eve-anchor

./: .gitattributes  .gitignore  .secrets  README.md  constellations.txt
crates/manager/: Cargo.toml  README.md
crates/manager/src/: lib.rs
crates/manager/src/database/: mod.rs  mysql.rs  postgres.rs
crates/manager/src/entities/: alliance.rs  capsuleer.rs  corporation.rs  member.rs  mod.rs  outpost.rs  prelude.rs  problem.rs  skill.rs
crates/manager/src/environment/: mod.rs  production.rs  test.rs
crates/manager/src/migrator/: m20240804_000001_create_member_table.rs  m20240804_000002_create_capsuleer_table.rs  m20240804_000003_create_skill_table.rs  m20250109_000001_create_alliance_table.rs  m20250109_000002_create_corporation_table.rs  m20250109_000003_alter_member_table.rs  m20250109_000004_alter_capsuleer_table.rs  m20250110_000001_create_problem_table.rs  m20250110_000002_create_outpost_table.rs  m20250114_000001_alter_problem_table.rs  mod.rs
crates/manager/tests/integration/: database.rs  mod.rs
crates/manager/tests/unit/: alliance.rs  capsuleer.rs  corporation.rs  member.rs  mod.rs  outpost.rs  problem.rs  skill.rs
crates/material_lp/: Cargo.toml  README.md  build.rs  makefile
crates/material_lp/data/: all_items_info.json  celestials.json  constellations_r.json  planet_exploit_resource.json  systems_r.json
crates/material_lp/src/: assertions.rs  cache.rs  data.rs  lib.rs  main.rs  manager.rs  objective.rs  problem.rs  resource.rs  solution.rs  solver.rs  structure.rs
crates/material_lp/tests/: structure.txt  test_anchor.rs  test_assert.rs  test_cli.rs  test_manager.rs  test_objective.rs  test_problem.rs  test_solver.rs
crates/material_lp/tests/integration/: mod.rs  test_assert.rs  test_objective.rs  test_problem.rs
crates/material_lp/tests/unit/: mod.rs  resource_allocation_problem.rs  test_cache.rs  test_data.rs
services/api/: Cargo.toml
services/api/src/: error.rs  lib.rs  main.rs
services/api/src/routes/: capsuleers.rs  members.rs  mod.rs  skills.rs
services/api/tests/integration/: mod.rs  routes.rs
services/discord/: Cargo.toml
services/discord-bot/: Cargo.toml  README.md  build.rs
services/discord-bot/src/: bot.rs  lib.rs  main.rs
services/discord/src/: main.rs  report.rs
services/discord/src/commands/: add_member_outpost_to_problem.rs  capsuleer.rs  corporation.rs  delete_outpost.rs  list_outpost.rs  list_problem.rs  list_problem_material.rs  member.rs  mod.rs  new_capsuleer.rs  new_member.rs  new_outpost.rs  new_problem.rs  outpost.rs  problem.rs  problem_outpost.rs  solve_problem.rs
services/eve_anchor/: Cargo.toml  build.rs  commands.yml
services/eve_anchor/src/: bot.rs  commands.rs  lib.rs  main.rs  outpost.rs  report.rs
services/eve_anchor/tests/: test_outpost.rs  test_report.rs
