[package]
name = "manager"
version = "0.1.0"
edition = "2021"

[lib]
name = "manager"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.81"
futures = "0.3.30"
sea-orm = { version = "1.0.0", features = [ "sqlx-postgres", "runtime-async-std-native-tls", "macros" ] }
sea-orm-migration = "1.0.0"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.120"

[dev-dependencies]
sea-orm = { version = "0.12.15", features = [ "mock" ] }
serde_json = "1.0.116"
tokio = { version = "1.37.0", features = ["full"] }

[[test]]
name = "integration"
path = "tests/integration/mod.rs"


[[test]]
name = "unit"
path = "tests/unit/mod.rs"
