[package]
name = "material_lp"
version = "0.4.2"
edition = "2021"
authors = ["Andrew Sturza <sturzaam@gmail.com>"]
license = "Apache-2.0"
description = "A crate to optimize planet harvesting."
readme = "README.md"
homepage = "https://github.com/you/grrs"
repository = "https://github.com/you/grrs"
keywords = ["cli", "optimization", "eve-echoes"]
categories = ["command-line-utilities"]
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
arboard = "3.2.0"
serde = {version = "1.0.164", features = ["derive"] }
serde_json = "1.0.96"
lazy_static = "1.4"
good_lp = "0.3"
tabled = "0.12.2"
bincode = "1.3.3"

[dev-dependencies]
assert_cmd = "2.0.11"
predicates = "3.0.3"
assert_fs = "1.0.13"
rstest = "0.17.0"
float_eq = "1.0"
serial_test = "1.0"


[build-dependencies]
reqwest = { version = "0.11", features = ["blocking"] }
rayon = "1.5"