[package]
name = "material_lp"
version = "0.4.5"
edition = "2021"
authors = ["Andrew Sturza <sturzaam@gmail.com>"]
license = "Apache-2.0"
description = "A crate to optimize planet harvesting."
readme = "README.md"
homepage = "https://github.com/you/grrs"
repository = "https://github.com/you/grrs"
keywords = ["cli", "optimization", "eve-echoes"]
categories = ["command-line-utilities"]
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
manager = { version = "0.1.0", path = "../manager" }
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
arboard = "3.2.0"
async-trait = "0.1.81"
futures = "0.3.30"
sea-orm = { version = "1.0.0", features = [ "sqlx-postgres", "runtime-async-std-native-tls", "macros" ] }
sea-orm-migration = "1.0.0"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.120"
lazy_static = "1.4"
good_lp = "0.3"
tabled = "0.12.2"
bincode = "1.3.3"

[dev-dependencies]
assert_cmd = "2.0.11"
predicates = "3.0.3"
assert_fs = "1.0.13"
rstest = "0.17.0"
float_eq = "1.0"
serial_test = "1.0"
sea-orm = { version = "0.12.15", features = [ "mock" ] }
serde_json = "1.0.116"
tokio = { version = "1.37.0", features = ["full"] }

[[test]]
name = "integration"
path = "tests/integration/mod.rs"


[[test]]
name = "unit"
path = "tests/unit/mod.rs"