[package]
name = "api"
version = "0.1.0"
edition = "2021"

[dependencies]
futures = "0.3.30"
rocket = { version = "0.5", default-features = false, features = ["json"] }
serde = { version = "1.0", default-features = false, features = ["derive"] }
clap = { version = "4", features = ["derive"] }
jsonwebtoken = { version = "9.3", default-features = false }
bcrypt = { version = "0.15", default-features = false, features = ["std"] }
async-trait = { version = "0.1", default-features = false }
dotenv = { version = "0.15", default-features = false }
url = "2.5.3" #TODO: https://github.com/servo/rust-url/issues/992 
manager = { version = "0.1.0", path = "../../crates/manager" }
sea-orm = { version = "1.0.0", features = [ "sqlx-postgres", "runtime-async-std-native-tls", "macros" ] }

[dev-dependencies]
sea-orm = { version = "0.12.15", features = [ "mock" ] }
serde_json = "1.0.116"
tokio = "1.37.0"


[[test]]
name = "integration"
path = "tests/integration/mod.rs"


[[test]]
name = "unit"
path = "tests/unit/mod.rs"
