[package]
name = "discord"
version = "0.1.0"
edition = "2021"

[dependencies]
serenity = { version = "0.12.4", default-features = false, features = ["client", "gateway", "rustls_backend", "model", "collector"] }
manager = { version = "0.1.0", path = "../../crates/manager" }
material_lp = { version = "0.4", path = "../../crates/material_lp" }
sea-orm = { version = "1.0.0", features = [ "sqlx-postgres", "runtime-async-std-native-tls", "macros" ] }
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
dotenv = "0.15.0"
prettytable-rs = "0.10.0"
